# python-ci

./: .gitignore  LICENSE  README.md  action.yml  workflow-config.json
.github/workflows/: python-ci.yml  release-workflow.yml
fixtures/build_failure_project/: README.md  fail_build.py  pyproject.toml  setup.cfg
fixtures/build_failure_project/src/fixture_build_failure_project/: __init__.py
fixtures/dependency_failure_project/: README.md  pyproject.toml  requirements.txt  setup.cfg
fixtures/dependency_failure_project/src/fixture_dependency_failure_project/: __init__.py
fixtures/pip_project/: README.md  pyproject.toml  requirements-dev.txt  setup.cfg
fixtures/pip_project/src/fixture_pip_project/: __init__.py
fixtures/pip_project/tests/: test_fixture.py
fixtures/poetry_project/: README.md  pyproject.toml
fixtures/poetry_project/src/fixture_poetry_project/: __init__.py
fixtures/poetry_project/tests/: test_fixture.py
fixtures/test_failure_project/: README.md  pyproject.toml  setup.cfg
fixtures/test_failure_project/tests/: test_fixture.py
fixtures/uv_project/: README.md  pyproject.toml
fixtures/uv_project/src/fixture_uv_project/: __init__.py
fixtures/uv_project/tests/: test_fixture.py
scripts/github/: build.sh  create_and_push_tag.sh  create_release_tag.sh  create_workflow_release_summary.sh  enter_project_directory.sh  mark_stage_skipped.sh  prepare_workflow_release.sh  publish.sh  read_workflow_config.py  record_stage_status.sh  resolve_inputs.sh  resolve_version.py  resolve_workflow_defaults.sh  run_stage.sh  setup_tooling.sh  validate_build_report.py  validate_release.sh  write_build_report.py  write_summary.sh
